Actualizar Acce.html

--- a/Acce.html
+++ b/Acce.html
@@ -47,42 +47,47 @@
    </div>
    <div id="C">
 <a id="card"> 
-°Mozzarela... Grande: 150 Pesos.. Chica: 115 Pesos.
+    <h2 id="title">
+        Menú Pizzas
+    </h2>
+    <br>
+    </br>
+Pizza Mozzarela... Grande: 1500 Pesos.. Chica: 1150 Pesos.
 <br>
 </br>
-°Completa... Grande: 195 Pesos.. Chica: 160 Pesos
+Pizza Completa... Grande: 1950 Pesos.. Chica: 1600 Pesos
 <br>
 </br>
-°Anchoas... Grane: 115 Pesos.. Chica: 105 Pesos
+Pizza de Anchoas... Grane: 1150 Pesos.. Chica: 1050 Pesos
 <br>
 </br>
-°Fugazza... Grande: 130 Pesos.. Chica: 105 Pesos
+Fugazza... Grande: 1300 Pesos.. Chica: 1050 Pesos
 <br>
 </br>
-°Fugazzeta... Grande: 185 Pesos.. Chica: 140 Pesos
+Fugazzeta... Grande: 1850 Pesos.. Chica: 1400 Pesos
 <br>
 </br>
-°Napolitana... Grande: 210 Pesos.. Chica: 150 Pesos
+Pizza Napolitana... Grande: 2100 Pesos.. Chica: 1500 Pesos
 <br>
 </br>
-°Calabresa... Grande: 175 Pesos.. Chica: 140 Pesos
+Pizza Calabresa... Grande: 1750 Pesos.. Chica: 1400 Pesos
 <br>
 </br>
-°Palmitos... Grande: 230 Pesos.. Chica: 175 Pesos
+Pizza de Palmitos... Grande: 2300 Pesos.. Chica: 1750 Pesos
 <br>
 </br>
-°Espinaca... Grande: 185 Pesos.. Chica: 140 Pesos
+Pizza de Espinaca... Grande: 1850 Pesos.. Chica: 1400 Pesos
 <br>
 </br>
-°Ananá... Grande: 220 Pesos.. Chica: 160 Pesos
+Pizza con Ananá... Grande: 2200 Pesos.. Chica: 1600 Pesos
 <br>
 </br>
-°Cuatro Quesos... Grande: 220 Pesos.. Chica: 160 Pesos
+Pizza Cuatro Quesos... Grande: 2200 Pesos.. Chica: 1600 Pesos
 <br>
 </br>
-°Roquefort... Grande: 220 Pesos.. Chica: 160 Pesos
+Pizza Roquefort... Grande: 2200 Pesos.. Chica: 1600 Pesos
 <br>
 </br>
-°Atún... Grande: 220 Pesos.. Chica: 160 Pesos
+Pizza de Atún... Grande: 2200 Pesos.. Chica: 1600 Pesos
 </a>
 </div>
