Actualizar Acce.html

--- a/Acce.html
+++ b/Acce.html
@@ -50,6 +50,13 @@
     <h2 id="title">
         Menú Pizzas
     </h2>
+    <style>
+    #title{
+    font-family: "Calibri", cursive;
+    font-size: 28px;
+    color: Burlywood;
+        }
+    </style>
     <br>
     </br>
 Pizza Mozzarela... Grande: 1500 Pesos.. Chica: 1150 Pesos.
