--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                  <b>
                    <p class="F">
                      Franco Guarino
+                    <style>
+                    .F{
+                    font-family: "calibri", cursive;
+                    font-size: 20px;
+                    color: White;
+                    </style>
                   </p>
                 </b>
        </footer>
