Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
           <img class="Im"
                src="r.jpg"
                alt="Franco Guarino" 
-               height="450">
+               >
+              <style>
+              .Im{
+                 width: 100vw;
+                 height: auto;
+                }
+                </style>
      </figure>
   </div>
    <div>
