Actualizar carta.html

--- a/carta.html
+++ b/carta.html
@@ -52,6 +52,13 @@
        <br>
          <li><a id="b" href="carta.pdf">Archivo de Carta</a></li>
       </br>
+      <style>
+      #b{
+      font-style: "Calibri";
+      font-size: 24px;
+      color: white;
+      }
+      </style>
          <iframe
             src="Carta.jpg"
             alt="Franco Guarino">
