Actualizar carta.html

--- a/carta.html
+++ b/carta.html
@@ -55,8 +55,11 @@
       <style>
       #b{
       font-style: "Calibri";
-      font-size: 24px;
+      font-size: 26px;
       color: white;
+      }
+      #b{
+      font-hover: Burlywood;
       }
       </style>
          <iframe
