Actualizar carta.html

--- a/carta.html
+++ b/carta.html
@@ -58,8 +58,8 @@
       font-size: 26px;
       color: white;
       }
-      #b{
-      font-hover: Burlywood;
+      #b:Hover{
+      Color: Burlywood;
       }
       </style>
          <iframe
